<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/white"></FrameLayout>

    <include layout="@layout/line_gray" />

    <RadioGroup
        android:id="@+id/btn_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/color_f8f8f8"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/main_menu_drawable_padding"
        android:paddingTop="@dimen/main_menu_drawable_padding">


        <RadioButton
            android:id="@+id/menu_btn_1"
            style="@style/MainMenuStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableTop="@drawable/selector_main_menu_home"
            android:text="@string/main_menu_1" />


        <RadioButton
            android:id="@+id/menu_btn_2"
            style="@style/MainMenuStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableTop="@drawable/selector_main_menu_cai"
            android:text="@string/main_menu_2" />


        <RadioButton
            android:id="@+id/menu_btn_3"
            style="@style/MainMenuStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableTop="@drawable/selector_main_menu_money"
            android:text="@string/main_menu_3" />


        <RadioButton
            android:id="@+id/menu_btn_4"
            style="@style/MainMenuStyle"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:drawableTop="@drawable/selector_main_menu_more"
            android:text="@string/main_menu_4" />
    </RadioGroup>

</LinearLayout>