<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_app_background"
    android:orientation="vertical">

    <include layout="@layout/common_title" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="@dimen/certification_space_h" />

    <include layout="@layout/line_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingLeft="@dimen/my_item_h_padding"
        android:paddingRight="@dimen/my_item_h_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/my_item_h"
            android:background="@drawable/selector_trans_item">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"

                android:gravity="center_vertical"
                android:text="@string/certification_name"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/my_top_ticket_textsize" />

            <com.cmbb.app.views.widget.EditLayout
                android:id="@+id/tv_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center_vertical"
                android:textColor="@color/color_666666"
                android:textSize="@dimen/my_item_recharge_textsize" />
        </LinearLayout>

        <include layout="@layout/line_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/my_item_h"
            android:background="@drawable/selector_trans_item">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/certification_id"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/my_top_ticket_textsize" />

            <com.cmbb.app.views.widget.EditLayout
                android:id="@+id/tv_id"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center_vertical"
                android:textColor="@color/color_666666"
                android:textSize="@dimen/my_item_recharge_textsize" />
        </LinearLayout>
    </LinearLayout>

    <include layout="@layout/line_gray" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/certification_must_h"
        android:paddingLeft="@dimen/my_item_h_padding"
        android:paddingTop="5dp"
        android:text="@string/certification_tip1"
        android:textColor="@color/color_ee5447"
        android:textSize="@dimen/certification_tip_textsize" />

    <include layout="@layout/line_gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingLeft="@dimen/my_item_h_padding"
        android:paddingRight="@dimen/my_item_h_padding">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/my_item_h"
            android:background="@drawable/selector_trans_item">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"

                android:gravity="center_vertical"
                android:text="@string/certification_card"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/my_top_ticket_textsize" />

            <com.cmbb.app.views.widget.EditLayout
                android:id="@+id/tv_card"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center_vertical"
                android:textColor="@color/color_666666"
                android:textSize="@dimen/my_item_recharge_textsize" />
        </LinearLayout>

        <include layout="@layout/line_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/my_item_h"
            android:background="@drawable/selector_trans_item">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/certification_mobile"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/my_top_ticket_textsize" />

            <com.cmbb.app.views.widget.EditLayout
                android:id="@+id/tv_mobile"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center_vertical"
                android:textColor="@color/color_666666"
                android:textSize="@dimen/my_item_recharge_textsize" />
        </LinearLayout>

        <include layout="@layout/line_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/my_item_h" android:visibility="gone"
            android:background="@drawable/selector_trans_item">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/certification_code"
                android:textColor="@color/color_333333"
                android:textSize="@dimen/my_top_ticket_textsize" />

            <com.cmbb.app.views.widget.EditLayout
                android:id="@+id/tv_code"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center_vertical"
                android:textColor="@color/color_666666"
                android:textSize="@dimen/my_item_recharge_textsize" />

            <Button
                android:id="@+id/send_code"
                android:layout_width="@dimen/certification_code_w"
                android:layout_height="@dimen/certification_code_h"
                android:layout_gravity="center_vertical"
                android:background="@drawable/selector_btn_blue"
                android:gravity="center"
                android:text="@string/certification_code_get"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>

    <include layout="@layout/line_gray" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/certification_must_h"
        android:paddingLeft="@dimen/my_item_h_padding"
        android:paddingTop="5dp"
        android:text="@string/certification_tip2"
        android:textColor="@color/color_ee5447"
        android:textSize="@dimen/certification_tip_textsize" />

    <Button
        android:id="@+id/commit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/login_btn_height"
        android:layout_marginLeft="@dimen/login_logo_padding"
        android:layout_marginRight="@dimen/login_logo_padding"
        android:background="@drawable/selector_btn_blue"
        android:text="@string/common_text_commit"
        android:textColor="@color/white"
        android:textSize="@dimen/login_btn_textsize" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/forget_safer_margin_top"
        android:drawableLeft="@mipmap/icon_safer_detail"
        android:text="@string/forget_safer_detail" android:visibility="invisible"
        android:textColor="@color/color_999999"
        android:textSize="@dimen/forget_safer_des_textsize" />
</LinearLayout>